--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,10 @@
 {
-  "presets": [
-    "@babel/preset-env"
-  ],
+  "presets": ["@babel/preset-env"],
   "plugins": [
     [
       "module-resolver",
       {
-        "root": [
-          "./src"
-        ],
+        "root": ["./src"],
         "alias": {
           "test": "./test"
         }
@@ -39,6 +35,8 @@
     ],
     "@babel/plugin-proposal-nullish-coalescing-operator",
     "@babel/plugin-proposal-do-expressions",
-    "@babel/plugin-proposal-function-bind"
+    "@babel/plugin-proposal-function-bind",
+    "@babel/plugin-transform-regenerator",
+    "@babel/plugin-transform-runtime"
   ]
 }
