fix(prettier): add missing rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,12 +3,13 @@
   "parser": "babel-eslint",
   "plugins": ["import", "prettier", "standard"],
   "rules": {
-      "indent": ["error", 2, {"SwitchCase": 1}],
-      "quotes": [2, "single"],
-      "semi": [2, "never"],
-      "comma-dangle": [2, "never"],
-      "no-trailing-spaces": [2],
-      "prettier/prettier": 2,
-      "space-before-function-paren": 0
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "quotes": [2, "single"],
+    "semi": [2, "never"],
+    "comma-dangle": [2, "never"],
+    "no-trailing-spaces": [2],
+    "prettier/prettier": 2,
+    "space-before-function-paren": 0,
+    "arrow-parens": [2, "as-needed", { "requireForBlockBody": false }]
   }
 }
